[fix]#10635 + button hover remains on mobile

--- a/_modules.scss
+++ b/_modules.scss
@@ -4384,7 +4384,7 @@ label{
 	position: absolute;
 	right: -12px;
 	top: -11px;
-	padding: 5px;
+	padding: 5px 5px 10px 10px;
 	cursor: pointer;
 	z-index: 1;
 
